<resources>
    <string name="app_name">helloworld</string>
    <string name="login">Log In Now</string>
    <string name="login_button"> Log In</string>
    <string name="sign_button">Sign up</string>
    <string name="user_hint">Enter UserName</string>
    <string name="pass_hint">Enter Password</string>
    <string name="newuser">Are you a new user?</string>
    <string name="forget">Forgot Password?</string>
    <string name="otp">Sign In using One-time link</string>
    <string name="signup">Sign Up</string>
    <string name="signupSub">Create an account, its Free🥳</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="olduser">Already have an account ?</string>
    <string name="tell_us_more_about_yourself">Tell us more about yourself</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="user_or">Or</string>
    <string name="fetch_address_using_gps">Fetch address using GPS</string>
    <string name="user_arrow">➜</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="profile">Profile</string>
    <string name="mycart">MyCart</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_details">User Details</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="review_your_order">Review Your Order</string>
    <string name="checkout">Checkout</string>
    <string name="back_t0_cart">Back T0 Cart</string>
    <string name="back_to_billing_page">Back To Billing Page</string>

</resources>